awms-keycloak-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: awms-hyperlogic-keycloak-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: awms-hyperlogic-keycloak
  template:
    metadata:
      labels:
        app: awms-hyperlogic-keycloak
    spec:
      containers:
        - name: awms-hyperlogic-keycloak
          image: ghcr.io/codox/awms-hyperlogic-keycloak:0.0.1
          imagePullPolicy: IfNotPresent
