keycloak-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak-ingress
spec:
  rules:
  - host: auth.jpanda.prg
    http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: awms-hyperlogic-keycloak
              port:
                number: 80
